--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,13 +37,13 @@
     <article class="project">
       <h3>Poetry on TikTok</h3>
       <p>An ongoing project where I mix original poems with custom beats and animations shared on social platforms.</p>
-      <a href="https://tiktok.com/@yourusername" target="_blank">View Project</a>
+      <a href="https://tiktok.com/@diaryofhillary" target="_blank">View Project</a>
     </article>
 
     <article class="project">
       <h3>Digital Art Store</h3>
       <p>A store on Etsy where I sell customizable digital illustrations and collectibles.</p>
-      <a href="https://www.etsy.com/shop/yourshopname" target="_blank">View Project</a>
+      <a href="https://www.etsy.com/shop/Mablaryystore" target="_blank">View Project</a>
     </article>
 
   </section>
@@ -59,7 +59,7 @@
     <p>You can reach me via email or through my professional profiles below:</p>
     <ul>
       <li><a href="mailto:hillaryocharo@example.com">hillaryocharo@example.com</a></li>
-      <li><a href="https://www.linkedin.com/in/your-linkedin" target="_blank">LinkedIn</a></li>
+      <li><a href="https://www.linkedin.com/in/HillaryOcharo" target="_blank">LinkedIn</a></li>
       <li><a href="https://github.com/HillaryOcharo" target="_blank">GitHub</a></li>
     </ul>
   </section>
